appId: com.edde746.plezy.dev
---
- assertVisible: "${AUDIO_TRACK}"
- tapOn:
    text: "${AUDIO_TRACK}"
- extendedWaitUntil:
    visible: "(?s)^.*Audio & Subtitles$"
    timeout: 30000
- tapOn: "(?s)^.*Audio & Subtitles$"
- assertVisible: "${SUBTITLE_TRACK}"
- tapOn:
    text: "${SUBTITLE_TRACK}"
- extendedWaitUntil:
    visible: "(?s)^.*Audio & Subtitles$"
    timeout: 30000
- tapOn: "(?s)^.*Audio & Subtitles$"
- assertVisible:
    text: "${AUDIO_TRACK}"
    selected: true
- assertVisible:
    text: "${SUBTITLE_TRACK}"
    selected: true
- back
